# DeployView

./: README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_frontend.yml  deploy_backend.yml  deploy_frontend.yml
backend/: Dockerfile  create-deployment.json  go.mod  go.sum  main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/handlers/: applications.go  deployments.go  root.go
backend/utilities/: deployments.go  identity.go  requests.go
frontend/: Dockerfile  go.mod  main.go  package-lock.json  package.json
frontend/src/: App.tsx
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: index.html
terraform/: main.tf
