[tool.poetry]
name = "deployview"
version = "0.1.0"
description = "A backend service for AWS CodeDeploy visualization."
authors = ["Colton Herrod <coltonherrod@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^5.1.7"
boto3 = "^1.28.0"
workos = "^5.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
